# mod-azerothshard

./: CMakeLists.txt  README.md  acore-module.json
.github/workflows/: core-build.yml
conf/: AzerothShard.conf.dist  azth_mod.conf.dist
data/sql/db-characters/: 01_reputation_vendor.sql  bonus_rating.sql  buy_log.sql  characters_saved_position.sql  characters_xp_rate.sql  guildhouses.sql  worldstates.sql
data/sql/db-world/: 00-general.sql  02_pve_quests.sql  03_update.sql  04_vendors.sql  05_quest_tier3.sql  06_pvp_quests.sql  07_sacks_of_marks.sql  08_update.sql  09_lfg_rewards_update.sql  10_pvp_quest_english.sql  alias.sql  azerothshard_2024_03_19.sql  (+7 more)
modules/mod-arena-solo-3v3/: CMakeLists.txt  Solo3v3Load.h
modules/mod-as-common/: CMakeLists.txt  CustomTables.txt  include.sh
modules/mod-as-platform/: CMakeLists.txt
modules/mod-challenge-mode/: CMakeLists.txt  README.md
modules/mod-guildhouse/: CMakeLists.txt  include.sh
modules/mod-hearthstone-mode/: CMakeLists.txt  include.sh
modules/mod-playerstats/: CMakeLists.txt  include.sh
modules/mod-pvp-mode/: CMakeLists.txt  include.sh
modules/mod-pvpitemlevel/: CMakeLists.txt  include.sh
modules/mod-smartstone/: CMakeLists.txt  include.sh
modules/mod-timewalking/: CMakeLists.txt  include.sh
modules/mod-tournament/: CMakeLists.txt  include.sh
modules/mod-xp-rates/: CMakeLists.txt  include.sh
src/: azeroth_shard_loader.cpp  loader.cpp
src/ASCommon/: AzthFirstKills.cpp  AzthLanguage.cpp  AzthLanguage.h  AzthLanguageStrings.h  AzthObject.cpp  AzthPlayer.cpp  AzthPlayer.h  AzthPlayerPlg.cpp  AzthUtils.cpp  AzthWorldScript.cpp  PluginsMgr.cpp  cs_azth_custom.cpp
src/ASPlatform/: AZTH.cpp  AZTH.h  AZTH_SC.cpp
src/ArenaSolo3v3/: Solo3v3.cpp  Solo3v3.h  Solo3v3_SC.cpp
src/ChallengeMode/: ChallengeModeMgr.h  ChallengeModeScript.cpp
src/GuildHouse/: GuildHouse.cpp  GuildHouse.h  Teleport.cpp  Teleport.h  npc_guildhouse.cpp
src/HearthstoneMode/: PlayerHearthstoneMode.cpp  azth_custom_hearthstone_mode.cpp  azth_custom_hearthstone_mode.h
src/Playerstats/: AzthAchievement.cpp  AzthGroupMgr.cpp  AzthGroupMgr.h  AzthInstanceMgr.cpp  AzthInstanceMgr.h  PStatsScripts.cpp  PlayerStats.cpp
src/PvpItemLevel/: ArenaSeason.cpp  BGItemLevel.cpp
src/PvpMode/: PlayerPvP.cpp  ProfessionNpc.cpp  PvPMode.cpp
src/Smartstone/: Apps.h  AzthSmartStone.cpp  AzthSmartStone.h  CharApps.cpp  Misc.cpp  PlayerSmartstone.cpp  PvPApps.cpp
src/Timewalking/: AzthTimewalkingUtils.cpp  PlayerTimewalking.cpp  TimeWalking.cpp
src/Tournament/: RatingBonus.cpp
src/XpRates/: CustomRates.cpp  CustomRates.h  PlayerXpRates.cpp
(+156 files in other folders)
