add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-arena-solo-3v3")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-as-common")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-as-platform")
# add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-guildhouse")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-hearthstone-mode")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-playerstats")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-pvpitemlevel")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-smartstone")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-timewalking")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-tournament")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/modules/mod-xp-rates")
